--- a/styles.css
+++ b/styles.css
@@ -250,3 +250,19 @@ footer {
         height: 200px;
     }
 }
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .nav-list {
+        flex-direction: column;
+        width: 100%;
+    }
+    .nav-list li {
+        margin: 10px 0;
+    }
+    .featured-art {
+        grid-template-columns: 1fr;
+    }
+}
